--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Canvas Pong ===========",
   "main": "game.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "docker-compose up server"
   },
   "repository": {
     "type": "git",
@@ -12,8 +13,9 @@
   },
   "author": "ants <contact@ants.builders> (http://ants.builders/)",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jakesgordon/javascript-pong/issues"
-  },
-  "homepage": "https://github.com/jakesgordon/javascript-pong"
+  "dependencies": {
+    "compression": "^1.4.4",
+    "es6-shim": "^0.31.3",
+    "express": "^4.12.4"
+  }
 }
