making it a gh page

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "game.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "docker-compose up server -d",
     "start": "docker-compose up server"
   },
   "repository": {
